# Inpaint

./: README.md
Inpaint-qt/: CMakeLists.txt  ExamplarInpaint.pro  Inpaint-qt.pro  gradientcalculator.cpp  gradientcalculator.h  inpainter.cpp  inpainter.h  main.cpp
